--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My Bitstarter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="./css/bootstrap-combined.no-icons.min.css">
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap-combined.no-icons.min.css">
     <style type="text/css">
       body {
         padding-top: 20px;
