--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="/css/bootstrap-combined.no-icons.min.css">
     <link type="text/css" rel="stylesheet" href="/css/font-awesome.css">
+    <link type="text/css" rel="stylesheet" href="/css/social-buttons.css">
+    <script src="/js/startupCode_jquery.js"></script>
   </head>
   <body>
     Sample Body
   </body>
 </html>
+
     
